[package]
name = "bird"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["bird-math", "bird-memory"]

[dependencies]
bird_math = { path = "./bird-math" }
winapi = { version = "0.3.9", features = ["minwindef"] }
dllmain-rs = { git = "https://github.com/zeon256/dllmain-rs" }
minhook-sys = "0.1.1"
bird-memory = { path = "./bird-memory" }